Fixed banner image and text alignment

--- a/css/blog.css
+++ b/css/blog.css
@@ -9,6 +9,18 @@
     display: inline;
 }
 
+#banner h2 , #banner h2 a{
+    color: #DDDDDD;
+}
+
+#banner img.buet-logo{
+    display: inline;
+}
+
+.d-inline {
+    display: inline;
+}
+
 body {
   color:#828282;
   background-color:#eee;
